--- a/src/scss/utils/_general.scss
+++ b/src/scss/utils/_general.scss
@@ -50,11 +50,6 @@ body {
     background-size: cover;
 }
 
-.g-2rem,
-.gy-2rem {
-    --cui-gutter-y: 2rem;
-}
-
 @media (min-width: 1600px) {
 
     .container,
@@ -64,6 +59,6 @@ body {
     .container-xl,
     .container-xxl {
         --container-xxxl: 1400px;
-        max-width: calc(var(--container-xxxl) + var(--cui-gutter-x));
+        max-width: calc(var(--container-xxxl) + var(--bs-gutter-x));
     }
 }
