--- a/src/scss/utils/_sections.scss
+++ b/src/scss/utils/_sections.scss
@@ -3,9 +3,12 @@
 
 .section {
     position: relative;
-    padding: 30px 0px;
 }
 
 .section-heading {
     margin-bottom: 15px;
+}
+
+.section-body {
+    
 }
