--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -2,52 +2,41 @@
 [ variables ]*/
 
 :root {
-    --theme-ff-main: 'Muller', sans-serif;
-    --theme-ff-title: 'Spectral', serif;
+    --theme-ff-main: 'Inter', sans-serif;
+    --theme-ff-title: 'Inter', sans-serif;
 
-    --cui-primary: #566B61;
-    --cui-secondary: #B4664C;
-    --cui-success: #1AB86D;
-    --cui-info: #0dcaf0;
-    --cui-warning: #ffc107;
-    --cui-danger: #dc3545;
-    --cui-light: #f8f9fa;
-    --cui-dark: #212529;
+    --bs-primary: #4251f7; 
+    --bs-secondary: #f74251;
+    --bs-light: #f8feff;
+    --bs-dark: #100102;
+    --bs-primary-rgb: 66, 81, 247;
+    --bs-secondary-rgb: 247, 66, 81;
+    --bs-light-rgb: 248, 254, 255;
+    --bs-dark-rgb: 16, 1, 2;
 
-    --cui-primary-rgb: 86, 107, 97;
-    --cui-secondary-rgb: 180, 102, 76;
-    --cui-success-rgb: 26, 184, 109;
-    --cui-info-rgb: 13, 202, 240;
-    --cui-warning-rgb: 255, 193, 7;
-    --cui-danger-rgb: 220, 53, 69;
-    --cui-light-rgb: 248, 249, 250;
-    --cui-dark-rgb: 33, 37, 41;
-    --cui-secondary-color: rgba(155, 155, 155, 0.875);
-    --cui-secondary-color-rgb: 155, 155, 155;
+    --bs-body-font-family: var(--theme-ff-main);
+    --bs-body-font-size: 1rem;
+    --bs-body-font-weight: 400;
+    --bs-body-line-height: 1.25;
+    --bs-body-color: #100102;
+    --bs-body-color-rgb: 16, 1, 2;
+    --bs-body-bg: #ececec;
+    --bs-body-bg-rgb: 236, 236, 236;
+    --bs-border-width: 1px;
+    --bs-border-style: solid;
+    --bs-border-color: #e4e4e5;
+    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+    --bs-border-radius: 16px;
+    --bs-border-radius-sm: 8px; 
+    --bs-border-radius-lg: 20px;
+    --bs-border-radius-xl: 22px;
+    --bs-border-radius-2xl: 24px;
+    --bs-border-radius-pill: 50rem;
 
-    --cui-body-font-family: var(--theme-ff-main);
-    --cui-body-font-size: 1rem;
-    --cui-body-font-weight: 400;
-    --cui-body-line-height: 1.25;
-    --cui-body-color: #1F3326;
-    --cui-body-color-rgb: 31, 51, 38;
-    --cui-body-bg: #F6F6F6;
-    --cui-body-bg-rgb: 246, 246, 246;
-    --cui-border-width: 1px;
-    --cui-border-style: solid;
-    --cui-border-color: #dee2e6;
-    --cui-border-color-translucent: rgba(0, 0, 0, 0.175);
-    --cui-border-radius: 0.625rem;
-    --cui-border-radius-sm: 0.25rem;
-    --cui-border-radius-lg: 0.5rem;
-    --cui-border-radius-xl: 1rem;
-    --cui-border-radius-2xl: 2rem;
-    --cui-border-radius-pill: 50rem;
+    --bs-link-color: #100102;
+    --bs-link-color-rgb: 16, 1, 2;
+    --bs-link-hover-color: #4251f7;
+    --bs-link-hover-color-rgb: 66, 81, 247;
 
-    --cui-link-color: #566B61;
-    --cui-link-color-rgb: 86, 107, 97;
-    --cui-link-hover-color: #1F3326;
-    --cui-link-hover-color-rgb: 31, 51, 38;
-
-    --swiper-theme-color: #C3846F;
+    --swiper-theme-color: #4251f7;
 }
