--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
                     <div class="btn-box">
-                        <a href="tel:+74951595901" class="btn btn-outline-dark btn-m">
+                        <a href="tel:+74951595901" class="btn btn-outline-black btn-m">
                             <span>+7 495 159-59-01</span>
                         </a>
                         <button type="button" class="btn btn-primary btn-m">
@@ -52,100 +52,5 @@
 
         </div>
     </div>
-
-    <!-- Catalog menu -->
-    <!-- <div class="catalog-menu-area collapse" id="collapseCatalogMenu">
-        <div class="catalog-menu-wrapper">
-            <div class="container">
-                <div class="catalog-menu-body">
-                    <div class="row gy-4">
-                        <div class="col-lg-3">
-                            <div class="h2">Книги</div>
-                            <div class="d-flex flex-column align-items-start gap-4">
-                                <a class="btn btn-gray-light" href="#">
-                                    <svg width="20" height="21" class="me-1">
-                                        <use xlink:href="img/sprite.svg#icon-pen"></use>
-                                    </svg>
-                                    <span>Новинки</span>
-                                </a>
-                                <a class="btn btn-gray-light" href="#">
-                                    <svg width="20" height="21" class="me-1">
-                                        <use xlink:href="img/sprite.svg#icon-pen"></use>
-                                    </svg>
-                                    <span>Бесплатные</span>
-                                </a>
-                                <a class="btn btn-gray-light" href="#">
-                                    <svg width="20" height="21" class="me-1">
-                                        <use xlink:href="img/sprite.svg#icon-pen"></use>
-                                    </svg>
-                                    <span>Рекомендуемые</span>
-                                </a>
-                            </div>
-                            <div class="mt-4">
-                                <a href="#" class="align-middle">
-                                    <span>Все книги</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12" fill="none">
-                                        <path d="M1 1L7 6L1 11" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg">
-                            <div class="h2">Жанры</div>
-                            <div class="row row-cols-1 row-cols-lg-2 gy-4">
-                                <div class="col">
-                                    <div class="catalog-genre-title h3">
-                                        <a href="#">Художественная литература</a>
-                                    </div>
-                                    <ul class="catalog-genre-menu">
-                                        <li>
-                                            <a href="#">Современная проза</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Историческая и военная литература</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Контркультура</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Поэзия и драматургия</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Зарубежная литература</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col">
-                                    <div class="catalog-genre-title h3">
-                                        <a href="#">Нон-фикшн</a>
-                                    </div>
-                                    <ul class="catalog-genre-menu">
-                                        <li>
-                                            <a href="#">Менеджмент</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Финансовый менеджмент</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Маркетинг, PR, реклама</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Психология</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Научно-популярная литература</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="mt-4 text-center text-lg-start">
-                                <button type="button" class="btn btn-outline btn-lg rounded-pill">полный список жанров</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
     
 </header>
