--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,4 +1,163 @@
 /*------------------------------------------------------------------
 [ footer ]*/
 
-.footer {}
+.footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    padding: 20px 0;
+
+    &__cta-bar {
+
+        .cta-content {
+            position: relative;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+
+            &__logo {}
+
+            &__contacts {
+                --bs-link-color-rgb: var(--theme-white-rgb);
+                --bs-link-hover-color-rgb: var(--theme-black-rgb);
+                display: flex;
+                flex-direction: column;
+
+                .contact-link {}
+
+                .contact-socials {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    margin-top: 30px;
+
+                    .link-social {}
+
+                    @media (min-width: 961px) {
+                        justify-content: flex-end;
+                    }
+                }
+
+                @media (min-width: 961px) {
+                    text-align: right;
+                }
+            }
+
+            &__form-title {}
+
+            &__form {
+
+                .form-wrapper {
+                    overflow: hidden;
+                    padding: 30px;
+                    border-radius: 16px;
+                    border: 1px solid;
+                    border-image-source: linear-gradient(309.65deg, rgba(16, 1, 2, 0.5) 42.38%, rgba(240, 242, 255, 0.5) 88.92%);
+                    backdrop-filter: blur(5px);
+                    box-shadow: -5px -5px 40px 0px rgba(238, 244, 254, 0.14) inset;
+                    background: rgba(238, 244, 254, 0.05);
+                }
+            }
+
+            @media (max-width: 960px) {
+                grid-template-columns: 1fr;
+            }
+            
+            @media (min-width: 961px) {
+                &__logo {
+                    grid-row: 1 / 3;
+                    grid-column: 1 / 2;
+                }
+    
+                &__contacts {
+                    grid-row: 1 / 4;
+                    grid-column: 2 / 3;
+                }
+    
+                &__form-title {
+                    grid-row: 3 / 4;
+                    grid-column: 1 / 2;
+                }
+    
+                &__form {
+                    grid-row: 4 / 5;
+                    grid-column: 1 / 3;
+                }
+            }
+        }
+    }
+
+    &__main-bar {}
+    
+    &__copyright-bar {
+        
+        .copyright-text {
+            --bs-link-opacity: 0.6;
+            text-align: center;
+            color: rgba(var(--theme-black-rgb), 0.6);
+
+            span {
+                display: inline-block;
+            }
+        }
+    }
+
+    .footer-widget {
+        padding: 20px 0;
+
+        &__title {
+            margin-bottom: 8px;
+
+            .h3 {
+                margin-bottom: 0;
+            }
+
+            .h3:not(.collapse-link) {
+
+                @media (max-width: 960px) {
+                    display: none;
+                }
+            }
+
+            .collapse-link {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                svg {
+                    transition: all 0.3s ease;
+                }
+
+                &:not(.collapsed) svg {
+                    transform: rotate(180deg);
+                }
+
+                @media (min-width: 961px) {
+                    display: none;
+                }
+            }
+        }
+
+        .collapse {
+
+            @media (min-width: 961px) {
+                display: block !important;
+            }
+        }
+
+        &__menu {
+            .nav {
+                --bs-nav-link-padding-x: 0;
+                --bs-nav-link-color: rgba(var(--theme-black-rgb), 0.6);
+            }
+        }
+
+        @media (max-width: 960px) {
+            padding: 15px 0;
+        }
+    }
+
+    @media (max-width: 414px) {
+        gap: 15px;
+    }
+}
