--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,8 +3,8 @@
 
 .header {
     position: relative;
-    height: 75px;
-    margin-bottom: 20px;
+    // height: 75px;
+    // margin-bottom: 20px;
 }
 
 .fixed-header {
