--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -4,13 +4,11 @@
 /* section__home-hero */
 
 .section__home-hero {
-    margin-top: -75px;
-    margin-bottom: 20px;
+    // margin-top: -75px;
+    // margin-bottom: 20px;
+    background-color: #030202;
 
-    .section-body {
-        min-height: 720px;
-        padding: 40px;
-    }
+    .section-body {}
 
     .hero-grid {
         display: grid;
