--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="site-header">
 
     <div class="fixed-header">
-        <div class="container">
+        <div class="container-fluid">
             <div class="main-header">
 
                 <!-- main-header__logo -->
