--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -12,10 +12,10 @@
                     </div>
                     <div class="cta-content__contacts">
                         <div class="contact-link link-phone">
-                            <a href="tel:+74951595901" class="fs-40">+7 495 159-59-01</a>
+                            <span class="h2"><a href="tel:+74951595901">+7 495 159-59-01</a></span>
                         </div>
                         <div class="contact-link link-email">
-                            <a href="mailto:support@amdmedia.ru" class="fs-22 fw-medium">support@amdmedia.ru</a>
+                            <span class="h4 fw-medium"><a href="mailto:support@amdmedia.ru">support@amdmedia.ru</a></span>
                         </div>
                         <div class="contact-socials">
                             <a href="#" class="link-social">
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="cta-content__form-title">
-                        <div class="fs-22 fw-medium text-white">Оставляйте заявку и мы свяжемся с вами</div>
+                        <div class="h4 fw-medium text-white mb-0">Оставляйте заявку<br> и мы свяжемся с вами</div>
                     </div>
                     <div class="cta-content__form">
                         <div class="form-wrapper">
@@ -70,16 +70,16 @@
                     <div class="col">
                         <!-- Разработка -->
                         <div class="footer-widget">
-                            <div class="footer-widget__title fs-22 fw-medium">
-                                <div class="h3">Разработка</div>
-                                <a href="#" class="h3 collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
+                            <div class="footer-widget__title">
+                                <div class="fs-22 fw-medium">Разработка</div>
+                                <a href="#footerNavDev" class="fs-22 fw-medium collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
                                     Разработка
                                     <svg width="16" height="17">
-                                        <use xlink:href="img/sprite.svg#footer-arrow-down"/>
+                                        <use xlink:href="img/sprite.svg#arrow-down"/>
                                     </svg>
                                 </a>
                             </div>
-                            <div class="collapse">
+                            <div class="collapse" id="footerNavDev">
                                 <nav class="footer-widget__menu">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
@@ -106,16 +106,16 @@
                         </div>
                         <!-- Выбор платформы -->
                         <div class="footer-widget">
-                            <div class="footer-widget__title fs-22 fw-medium">
-                                <div class="h3">Выбор платформы</div>
-                                <a href="#" class="h3 collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
+                            <div class="footer-widget__title">
+                                <div class="fs-22 fw-medium">Выбор платформы</div>
+                                <a href="#footerNavPlatform" class="fs-22 fw-medium collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
                                     Выбор платформы
                                     <svg width="16" height="17">
-                                        <use xlink:href="img/sprite.svg#footer-arrow-down"/>
+                                        <use xlink:href="img/sprite.svg#arrow-down"/>
                                     </svg>
                                 </a>
                             </div>
-                            <div class="collapse">
+                            <div class="collapse" id="footerNavPlatform">
                                 <nav class="footer-widget__menu">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
@@ -154,16 +154,16 @@
                     <div class="col">
                         <!-- Дизайн -->
                         <div class="footer-widget">
-                            <div class="footer-widget__title fs-22 fw-medium">
-                                <div class="h3">Дизайн</div>
-                                <a href="#" class="h3 collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
+                            <div class="footer-widget__title">
+                                <div class="fs-22 fw-medium">Дизайн</div>
+                                <a href="#footerNavDesign" class="fs-22 fw-medium collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
                                     Дизайн
                                     <svg width="16" height="17">
-                                        <use xlink:href="img/sprite.svg#footer-arrow-down"/>
+                                        <use xlink:href="img/sprite.svg#arrow-down"/>
                                     </svg>
                                 </a>
                             </div>
-                            <div class="collapse">
+                            <div class="collapse" id="footerNavDesign">
                                 <nav class="footer-widget__menu">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
@@ -181,16 +181,16 @@
                         </div>
                         <!-- Интеграции -->
                         <div class="footer-widget">
-                            <div class="footer-widget__title fs-22 fw-medium">
-                                <div class="h3">Интеграции</div>
-                                <a href="#" class="h3 collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
+                            <div class="footer-widget__title">
+                                <div class="fs-22 fw-medium">Интеграции</div>
+                                <a href="#footerNavIntegrations" class="fs-22 fw-medium collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
                                     Интеграции
                                     <svg width="16" height="17">
-                                        <use xlink:href="img/sprite.svg#footer-arrow-down"/>
+                                        <use xlink:href="img/sprite.svg#arrow-down"/>
                                     </svg>
                                 </a>
                             </div>
-                            <div class="collapse">
+                            <div class="collapse" id="footerNavIntegrations">
                                 <nav class="footer-widget__menu">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
@@ -238,16 +238,16 @@
                     <div class="col">
                         <!-- Поддержка -->
                         <div class="footer-widget">
-                            <div class="footer-widget__title fs-22 fw-medium">
-                                <div class="h3">Поддержка</div>
-                                <a href="#" class="h3 collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
+                            <div class="footer-widget__title">
+                                <div class="fs-22 fw-medium">Поддержка</div>
+                                <a href="#footerNavSupport" class="fs-22 fw-medium collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
                                     Поддержка
                                     <svg width="16" height="17">
-                                        <use xlink:href="img/sprite.svg#footer-arrow-down"/>
+                                        <use xlink:href="img/sprite.svg#arrow-down"/>
                                     </svg>
                                 </a>
                             </div>
-                            <div class="collapse">
+                            <div class="collapse" id="footerNavSupport">
                                 <nav class="footer-widget__menu">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
@@ -259,16 +259,16 @@
                         </div>
                         <!-- Компания -->
                         <div class="footer-widget">
-                            <div class="footer-widget__title fs-22 fw-medium">
-                                <div class="h3">Компания</div>
-                                <a href="#" class="h3 collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
+                            <div class="footer-widget__title">
+                                <div class="fs-22 fw-medium">Компания</div>
+                                <a href="#footerNavCompany" class="fs-22 fw-medium collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
                                     Компания
                                     <svg width="16" height="17">
-                                        <use xlink:href="img/sprite.svg#footer-arrow-down"/>
+                                        <use xlink:href="img/sprite.svg#arrow-down"/>
                                     </svg>
                                 </a>
                             </div>
-                            <div class="collapse">
+                            <div class="collapse" id="footerNavCompany">
                                 <nav class="footer-widget__menu">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
@@ -295,16 +295,16 @@
                         </div>
                         <!-- Проекты -->
                         <div class="footer-widget">
-                            <div class="footer-widget__title fs-22 fw-medium">
-                                <div class="h3">Проекты</div>
-                                <a href="#" class="h3 collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
+                            <div class="footer-widget__title">
+                                <div class="fs-22 fw-medium">Проекты</div>
+                                <a href="#footerNavProjects" class="fs-22 fw-medium collapse-link collapsed" data-bs-toggle="collapse" aria-expanded="false">
                                     Проекты
                                     <svg width="16" height="17">
-                                        <use xlink:href="img/sprite.svg#footer-arrow-down"/>
+                                        <use xlink:href="img/sprite.svg#arrow-down"/>
                                     </svg>
                                 </a>
                             </div>
-                            <div class="collapse">
+                            <div class="collapse" id="footerNavProjects">
                                 <nav class="footer-widget__menu">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
