--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,56 +1,54 @@
-<header class="header" id="site-header">
+<header class="header header-fixed" id="site-header">
 
-    <div class="fixed-header">
-        <div class="container-fluid">
-            <div class="main-header">
+    <div class="container-fluid">
+        <div class="header-row">
 
-                <!-- main-header__logo -->
-                <div class="main-header__logo">
-                    <a href="index.html">
-                        <img src="img/logo.svg" alt="AMD Media">
-                    </a>
-                </div>
-
-                <!-- main-header__navigation -->
-                <nav class="main-header__navigation">
-                    <ul class="primary-nav">
-                        <li class="nav-item">
-                            <a href="#">Проекты</a>
-                        </li>
-                        <li class="nav-item has-mega-menu">
-                            <a href="#">Услуги</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a href="#">Партнёры</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#">О нас</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#">Блог</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#">Контакты</a>
-                        </li>
-                    </ul>
-                    <div class="btn-box">
-                        <a href="tel:+74951595901" class="btn btn-outline-black btn-m">
-                            <span>+7 495 159-59-01</span>
-                        </a>
-                        <button type="button" class="btn btn-primary btn-m">
-                            <span>Связаться</span>
-                            <span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15" fill="none">
-                                    <path d="M12.271 1.52197L1.22803 1.52197L1.22803 0.521973L13.978 0.521973L13.978 13.272H12.978L12.978 2.229L0.718262 14.4888L0.0112305 13.7817L12.271 1.52197Z" fill="#F8FEFF"/>
-                                </svg>
-                            </span>
-                        </button>
-                    </div>
-                </nav>
-
+            <!-- header-row__logo -->
+            <div class="header-row__logo">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="AMD Media">
+                </a>
             </div>
 
+            <!-- header-row__navigation -->
+            <nav class="header-row__navigation">
+                <ul class="primary-nav">
+                    <li class="nav-item">
+                        <a href="#">Проекты</a>
+                    </li>
+                    <li class="nav-item has-mega-menu">
+                        <a href="#">Услуги</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="#">Партнёры</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">О нас</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Блог</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">Контакты</a>
+                    </li>
+                </ul>
+                <div class="btn-box">
+                    <a href="tel:+74951595901" class="btn btn-outline-black btn-m">
+                        <span>+7 495 159-59-01</span>
+                    </a>
+                    <button type="button" class="btn btn-primary btn-m">
+                        <span>Связаться</span>
+                        <span>
+                            <svg width="14" height="15">
+                                <use xlink:href="img/sprite.svg#btn-arrow-up"/>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+            </nav>
+
         </div>
+
     </div>
     
 </header>
