--- a/src/scss/utils/_forms.scss
+++ b/src/scss/utils/_forms.scss
@@ -1,7 +1,7 @@
 /*------------------------------------------------------------------
 [ forms ]*/
 
-.form-control {}
+// .form-control {}
 
 .input-m {
     padding: 12px 24px;
