--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -4,7 +4,7 @@
 .footer {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px;
+    gap: 15px;
     padding: 20px 0;
 
     &__cta-bar {
@@ -12,10 +12,10 @@
         .cta-content {
             position: relative;
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr;
             gap: 20px;
 
-            &__logo {}
+            // &__logo {}
 
             &__contacts {
                 --bs-link-color-rgb: var(--theme-white-rgb);
@@ -23,7 +23,7 @@
                 display: flex;
                 flex-direction: column;
 
-                .contact-link {}
+                // .contact-link {}
 
                 .contact-socials {
                     display: flex;
@@ -31,19 +31,19 @@
                     gap: 10px;
                     margin-top: 30px;
 
-                    .link-social {}
+                    // .link-social {}
 
-                    @media (min-width: 961px) {
+                    @media (min-width: 992px) {
                         justify-content: flex-end;
                     }
                 }
 
-                @media (min-width: 961px) {
+                @media (min-width: 992px) {
                     text-align: right;
                 }
             }
 
-            &__form-title {}
+            // &__form-title {}
 
             &__form {
 
@@ -58,12 +58,10 @@
                     background: rgba(238, 244, 254, 0.05);
                 }
             }
-
-            @media (max-width: 960px) {
-                grid-template-columns: 1fr;
-            }
             
-            @media (min-width: 961px) {
+            @media (min-width: 992px) {
+                grid-template-columns: 1fr 1fr;
+
                 &__logo {
                     grid-row: 1 / 3;
                     grid-column: 1 / 2;
@@ -77,6 +75,10 @@
                 &__form-title {
                     grid-row: 3 / 4;
                     grid-column: 1 / 2;
+
+                    .h4 br {
+                        display: none;
+                    }
                 }
     
                 &__form {
@@ -87,7 +89,7 @@
         }
     }
 
-    &__main-bar {}
+    // &__main-bar {}
     
     &__copyright-bar {
         
@@ -103,18 +105,18 @@
     }
 
     .footer-widget {
-        padding: 20px 0;
+        padding: 15px 0;
 
         &__title {
             margin-bottom: 8px;
 
-            .h3 {
-                margin-bottom: 0;
-            }
+            // .h3 {
+            //     margin-bottom: 0;
+            // }
 
-            .h3:not(.collapse-link) {
+            > *:not(.collapse-link) {
 
-                @media (max-width: 960px) {
+                @media (max-width: 991px) {
                     display: none;
                 }
             }
@@ -132,7 +134,7 @@
                     transform: rotate(180deg);
                 }
 
-                @media (min-width: 961px) {
+                @media (min-width: 992px) {
                     display: none;
                 }
             }
@@ -140,7 +142,7 @@
 
         .collapse {
 
-            @media (min-width: 961px) {
+            @media (min-width: 992px) {
                 display: block !important;
             }
         }
@@ -152,12 +154,12 @@
             }
         }
 
-        @media (max-width: 960px) {
-            padding: 15px 0;
+        @media (min-width: 992px) {
+            padding: 20px 0;
         }
     }
 
-    @media (max-width: 414px) {
-        gap: 15px;
+    @media (min-width: 414px) {
+        gap: 20px;
     }
 }
