--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,19 +3,34 @@
 
 .header {
     position: relative;
-    // height: 75px;
-    // margin-bottom: 20px;
+
+    &.header-fixed {
+        position: fixed;
+        top: 20px;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        transition: all 0.3s ease;
+    }
+
+    &.js-fixed {
+
+        .header-row {
+            border-color: var(--bs-body-bg);
+        }
+    }
+
+    &.header-fixed.js-fixed {
+        top: 10px;
+    }
+    
+    &.header-sticky {
+        position: sticky;
+        top: 0;
+    }
 }
 
-.fixed-header {
-    position: fixed;
-    top: 20px;
-    left: 0;
-    right: 0;
-    z-index: 100;
-}
-
-.main-header {
+.header-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -27,10 +42,6 @@
     background-color: #F8FEFF;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
-
-    &.fixed-active {
-        border-color: var(--bs-body-bg);
-    }
 
     &__logo {
         width: 142px;
