--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -4,17 +4,72 @@
 /* section__home-hero */
 
 .section__home-hero {
-    // margin-top: -75px;
-    // margin-bottom: 20px;
+    padding: 115px 0 20px;
     background-color: #030202;
-
-    .section-body {}
 
     .hero-grid {
         display: grid;
-        grid-template-columns: auto minmax(min-content, 720px);
-        grid-column-gap: 30px;
+        grid-template-columns: 1fr;
+        grid-column-gap: 0;
         grid-row-gap: 30px;
+
+        @media (min-width: 992px) {
+            // grid-template-columns: auto minmax(min-content, 700px);
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr auto;
+            grid-row-gap: 20px;
+
+            .hero-video {
+                grid-row: 1 / 4;
+                grid-column: 1 / 2;
+            }
+
+            .card-hero-info {
+                grid-row: 1 / 3;
+                grid-column: 2 / 3;
+            }
+
+            .hero-glass-cards {
+                grid-row: 3 / 4;
+                grid-column: 2 / 3;
+            }
+        }
+    }
+
+    .card-hero-info {
+        --bs-card-spacer-y: 40px;
+        --bs-card-spacer-x: 40px;
+        --bs-card-border-radius: var(--bs-border-radius-lg);
+        --bs-card-bg: var(--theme-white);
+
+        .card-body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .card-btn-wrapper {
+            margin-top: auto;
+        }
+    }
+
+    .card-glass {
+        --bs-card-spacer-y: 10px;
+        --bs-card-spacer-x: 10px;
+        --bs-card-bg: transparent;
+        --bs-card-bg: rgb(227 227 227 / 6%);
+        border-image-source: linear-gradient(309.65deg, rgba(16, 1, 2, 0.5) 42.38%, rgba(240, 242, 255, 0.5) 88.92%);
+        box-shadow: -5px -5px 40px 0px #EEF4FE24 inset;
+
+        .card-body {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        @media (min-width: 992px) {
+            --bs-card-spacer-y: 20px;
+            --bs-card-spacer-x: 20px;
+        }
     }
 }
 
