--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -22,95 +22,50 @@ h6,
 
 h1,
 .h1 {
-    font-size: 1.625rem;
+    font-size: var(--fs-h1);
 }
 
 h2,
 .h2 {
-    font-size: 1.5rem;
+    font-size: var(--fs-h2);
 }
 
 h3,
 .h3 {
-    font-size: 1.375rem;
+    font-size: var(--fs-h3);
 }
 
 h4,
 .h4 {
-    font-size: 1rem;
+    font-size: var(--fs-h4);
 }
 
 h5,
 .h5 {
-    font-size: 1.125rem;
+    font-size: var(--fs-h5);
 }
 
 h6,
 .h6 {
-    font-size: 1rem;
-}
-
-@media screen and (min-width: 1200px) {
-
-    h1,
-    .h1 {
-        font-size: 2rem;
-    }
-
-    h2,
-    .h2 {
-        font-size: 1.75rem;
-    }
-
-    h3,
-    .h3 {
-        font-size: 1.5rem;
-    }
-
-    h4,
-    .h4 {
-        font-size: 1.375rem;
-    }
-
-    h5,
-    .h5 {
-        font-size: 1.125rem;
-    }
-
-    h6,
-    .h6 {
-        font-size: 1.125rem;
-    }
+    font-size: var(--fs-h6);
 }
 
 // Font Size
 
-.fs-43 {
-    font-size: var(--fs-l-43);
-}
-
-.fs-40 {
-    font-size: var(--fs-l-40);
-}
-
-.fs-28 {
-    font-size: var(--fs-l-28);
-}
-
 .fs-22 {
-    font-size: var(--fs-l-22);
+    font-size: 22px !important;
 }
 
 .fs-18 {
-    font-size: var(--fs-l-18);
+    font-size: 18px !important;
 }
 
 .fs-16 {
-    font-size: var(--fs-l-16);
+    font-size: 16px !important;
 }
 
 .fs-14 {
-    font-size: var(--fs-l-14);
+    font-size: 14px !important;
 }
 
 // Paragraph
