--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -26,21 +26,15 @@
     --theme-red-rgb: 247, 66, 81;
     --theme-black-rgb: 16, 1, 2;
 
-    // Theme text
-    --fs-l-43: 43px;
-    // --fs-xl-lineheight: 32px;
-    --fs-l-40: 40px;
-    // --fs-lg-lineheight: 28px;
-    --fs-l-28: 28px;
-    // --fs-md-lineheight: 24px;
-    --fs-l-22: 22px;
-    // --fs-xs-lineheight: 22px;
-    --fs-l-18: 18px;
-    // --fs-xss-lineheight: 20px;
-    --fs-l-16: 16px;
-    --fs-l-14: 14px;
+    // Theme titles sizes
+    --fs-h1: clamp(36px, 4vw, 43px);
+    --fs-h2: clamp(28px, 3.2vw, 40px);
+    --fs-h3: clamp(22px, 2.2vw, 28px);
+    --fs-h4: clamp(18px, 1.8vw, 22px);
+    --fs-h5: clamp(16px, 1.2vw, 18px);
+    --fs-h6: 14px;
 
-    // Bootstrap
+    // Bootstrap CSS variables (for runtime use)
     --bs-primary: var(--theme-blue); 
     --bs-secondary: var(--theme-red);
     --bs-white: var(--theme-white);
@@ -73,5 +67,6 @@
     --bs-link-hover-color: var(--theme-blue);
     --bs-link-hover-color-rgb: var(--theme-blue-rgb);
 
+    // Swiper
     --swiper-theme-color: var(--theme-blue);
 }
