--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -3,7 +3,7 @@
     <!-- footer__cta-bar -->
     <div class="footer__cta-bar">
         <div class="container-fluid">
-            <div class="rounded-3 p-40 bg-blue-gradient position-relative overflow-hidden">
+            <div class="rounded-3 p-15 py-20 p-lg-40 bg-blue-gradient position-relative overflow-hidden">
                 <img class="bg-absolute-img img-fluid" src="img/footer/footer-bg-figure.png" style="position: absolute; top: -230px; right: -40px;">
                 <!-- grid -->
                 <div class="cta-content">
@@ -54,7 +54,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="text-center fs-14 text-white opacity-60 mt-4">Нажимая кнопку отправить я даю своё согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности</div>
+                        <div class="text-center fs-14 text-white text-opacity-60 mt-4">Нажимая кнопку отправить я даю своё согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности</div>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
     <!-- footer__main-bar -->
     <div class="footer__main-bar">
         <div class="container-fluid">
-            <div class="rounded-3 p-40 py-20 bg-white">
+            <div class="rounded-3 p-15 p-lg-40 py-lg-20 bg-white">
                 <div class="row row-cols-1 row-cols-lg-3">
 
                     <div class="col">
@@ -339,8 +339,8 @@
     <!-- footer__copyright-bar -->
     <div class="footer__copyright-bar">
         <div class="container-fluid">
-            <div class="rounded-3 p-40 py-20 bg-white">
-                <div class="copyright-text"><span>2014–2025г. © ООО «АМД Медиа» /</span> <span>сайт не является публичной офертой 2025г. /</span> <span><a href="#">Политика конфиденциальности</a></span></div>
+            <div class="rounded-3 p-15 p-lg-40 py-lg-20 bg-white">
+                <div class="copyright-text text-center text-muted link-opacity-60"><span>2014–2025г. © ООО «АМД Медиа» /</span> <span>сайт не является публичной офертой 2025г. /</span> <span><a href="#">Политика конфиденциальности</a></span></div>
             </div>
         </div>
     </div>
