--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -47,6 +47,45 @@
                 </div>
             </nav>
 
+            <div class="header-row__tablet-navigation">
+                <div class="btn-box">
+                    <button type="button" class="btn btn-outline-black btn-m">
+                        <span>Связаться</span>
+                        <span>
+                            <svg width="14" height="15">
+                                <use xlink:href="img/sprite.svg#btn-arrow-up"/>
+                            </svg>
+                        </span>
+                    </button>
+                    <button type="button" class="btn-mobile-toggler btn btn-primary">
+                        <span>
+                            <svg width="20" height="16">
+                                <use xlink:href="img/sprite.svg#icon-burger"/>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="header-row__mobile-navigation">
+                <div class="btn-box">
+                    <button type="button" class="btn btn-outline-black btn-m">
+                        <span>
+                            <svg width="30" height="30">
+                                <use xlink:href="img/sprite.svg#icon-phone"/>
+                            </svg>
+                        </span>
+                    </button>
+                    <button type="button" class="btn-mobile-toggler btn btn-primary">
+                        <span>
+                            <svg width="20" height="16">
+                                <use xlink:href="img/sprite.svg#icon-burger"/>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+            </div>
+
         </div>
 
     </div>
