--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -43,6 +43,8 @@
     --bs-secondary-rgb: var(--theme-red-rgb);
     --bs-white-rgb: var(--theme-white-rgb);
     --bs-black-rgb: var(--theme-black-rgb);
+    --bs-secondary-color: rgba(16, 1, 2, 0.6);
+    --bs-secondary-color-rgb: 16, 1, 2;
 
     --bs-body-font-family: var(--theme-ff-main), var(--bs-font-sans-serif);
     --bs-body-font-size: 16px;
