--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -35,8 +35,8 @@
     align-items: center;
     justify-content: space-between;
     height: 75px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 8px;
+    padding-right: 8px;
     border: 1px solid transparent;
     border-radius: 20px;
     background-color: #F8FEFF;
@@ -97,5 +97,46 @@
             gap: 10px;
             margin-left: 40px;
         }
+
+        @media (max-width: 1199px) {
+            display: none;
+        }
+    }
+
+    &__tablet-navigation {
+
+        .btn-box {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 4px;
+        }
+
+        @media (max-width: 767px) {
+            display: none;
+        }
+
+        @media (min-width: 1200px) {
+            display: none;
+        }
+    }
+
+    &__mobile-navigation {
+
+        .btn-box {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 4px;
+        }
+
+        @media (min-width: 768px) {
+            display: none;
+        }
+    }
+
+    @media (min-width: 1200px) {
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
