--- a/src/scss/utils/_swiper.scss
+++ b/src/scss/utils/_swiper.scss
@@ -1,6 +1,8 @@
 /*------------------------------------------------------------------
 [ swiper ]*/
 
+/* swiperPartners */
+
 .swiperPartners {
 
     .swiper-wrapper {
@@ -21,6 +23,8 @@
         }
     }
 }
+
+/* swiperHeroGlassCards */
 
 .swiperHeroGlassCards {
     --swiper-theme-color: var(--theme-white);
