--- a/src/scss/utils/_sections.scss
+++ b/src/scss/utils/_sections.scss
@@ -5,6 +5,190 @@
     position: relative;
 }
 
-.section-heading {
-    margin-bottom: 15px;
+/*------------------------------------------------------------------
+[ home page ]*/
+
+/* section-home-hero */
+
+.section-home-hero {
+    position: relative;
+    padding: 115px 0 20px;
+    background-color: #000;
+
+    .container-fluid {
+        height: 100%;
+    }
+
+    .hero-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        // grid-column-gap: 0;
+        // grid-row-gap: 30px;
+        height: 100%;
+
+        .grid-col {
+            min-width: 0;
+            min-height: 0
+        }
+    }
+
+    .hero-video-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+        .desktop-video {
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+
+            @media (max-width: 767px) {
+                display: none;
+            }
+        }
+
+        .mobile-image {
+
+            img {
+                max-width: 100%;
+                height: auto;
+            }
+
+            @media (min-width: 768px) {
+                display: none;
+            }
+        }
+    }
+
+    .card-hero-info {
+        --bs-card-spacer-y: 20px;
+        --bs-card-spacer-x: 15px;
+        --bs-card-border-radius: var(--bs-border-radius-lg);
+        --bs-card-bg: var(--theme-white);
+        flex-grow: 1;
+        margin-bottom: 30px;
+
+        .card-body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .card-btn-wrapper {
+            margin-top: 15px;
+        }
+
+        @media (min-width: 992px) {
+            --bs-card-spacer-y: 40px;
+            --bs-card-spacer-x: 40px;
+            margin-bottom: 20px;
+
+            .card-btn-wrapper {
+                margin-top: auto;
+            }
+        }
+    }
+
+    .hero-swiper-wrapper {
+        min-width: 0;
+    }
+
+    @media (min-width: 992px) {
+        height: calc(100vh - 140px);
+
+        .hero-grid {
+            // grid-template-columns: auto minmax(min-content, 700px);
+            grid-template-columns: 1fr 1fr;
+            // grid-template-rows: 1fr 1fr auto;
+            // grid-row-gap: 20px;
+
+        }
+        
+        // .hero-video-wrapper {
+        //     grid-row: 1 / 4;
+        //     grid-column: 1 / 2;
+        // }
+
+        // .card-hero-info {
+        //     grid-row: 1 / 3;
+        //     grid-column: 2 / 3;
+        // }
+
+        // .hero-swiper-wrapper {
+        //     grid-row: 3 / 4;
+        //     grid-column: 2 / 3;
+        // }
+    }
+}
+
+/* section-partners-slider */
+
+.section-partners-slider {
+    margin-bottom: 80px;
+}
+
+/* section-services-grid */
+
+.section-services-grid {
+    margin-bottom: 50px;
+
+    .cards-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+
+    @media (min-width: 768px) {
+        margin-bottom: 70px;
+
+        .cards-grid {
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+    }
+
+    @media (min-width: 992px) {
+        margin-bottom: 80px;
+
+        .cards-grid {
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 4px;
+        }
+    }
+
+    @media (min-width: 1200px) {
+        .cards-grid {
+            gap: 20px;
+        }
+    }
+}
+
+/* section-projects-grid */
+
+.section-projects-grid {
+    margin-bottom: 50px;
+
+    .cards-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+
+    @media (min-width: 768px) {
+        margin-bottom: 70px;
+
+        .cards-grid {
+            gap: 20px;
+        }
+    }
+
+    @media (min-width: 992px) {
+        margin-bottom: 80px;
+        
+        .cards-grid {
+            grid-template-columns: 1fr 1fr;
+        }
+    }
 }
